--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -10,3 +10,5 @@
 
 @import "./sections/modal";
 @import "./sections/tabs";
+@import "./sections/form-validation";
+@import "./sections/input-label";
