--- a/sass/utilities/_reset.scss
+++ b/sass/utilities/_reset.scss
@@ -43,8 +43,9 @@ a {
 input,
 textarea {
   padding: 1rem;
-  border: none;
+  border: 1px solid black;
   outline: none;
+  
 }
 
 ::-moz-placeholder {
